# preemptive

./: .gdbinit  README.md  layout.ld
.cargo/: config
Chapter1/: layout.ld
Chapter1-Startup/src/: startup.rs
Chapter1/src/: main.rs  startup.rs
Chapter2-USART/: openocd.gdb
Chapter2-USART/src/: debug.rs  main.rs  startup.rs  usart.rs
Chapter3-ContextSwitch/.cargo/: config
Chapter3-ContextSwitch/src/: led.rs  main.rs  startup.rs  switch_context.rs
Chapter4-Systick/: Cargo.toml  layout.ld
Chapter4-Systick/src/: main.rs
Chapter5-MultiTasking/src/: main.rs  startup.rs  systick.rs
Final/src/: debug.rs  main.rs  rcc.rs  startup.rs  switch_context.rs
src/: debug.rs  main.rs  rcc.rs  startup.rs  switch_context.rs  usart.rs
