[package]
name = "preemptive"
version = "0.1.0"
authors = ["andylokandy <andylokandy@hotmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5"
stm32f103xx = "0.11"

[profile.release]
# codegen-units = 1   # better optimizations
# lto = true          # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash